// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test task initFiles for empty dir 1`] = `
Array [
  "lib/index.ts",
  "parameters.yaml",
  "serverless/template.yaml",
  "tsconfig.json",
  "ui/config.yaml",
  "ui/pages/_document.tsx",
  "ui/pages/index.tsx",
  "ui/public/favicon.ico",
]
`;

exports[`Test task initFiles only common 1`] = `
Array [
  "lib/index.ts",
]
`;

exports[`Test task initFiles only serverless 1`] = `
Array [
  "lib/index.ts",
  "serverless/template.yaml",
]
`;

exports[`Test task initFiles only ui 1`] = `
Array [
  "lib/index.ts",
  "parameters.yaml",
  "tsconfig.json",
  "ui/config.yaml",
  "ui/pages/_document.tsx",
  "ui/pages/index.tsx",
  "ui/public/favicon.ico",
]
`;
